Fixed background on wallpaper 3 and squished game window again

--- a/app/style/main.css
+++ b/app/style/main.css
@@ -134,7 +134,7 @@ p {
 #game {
     flex: 1;
     display: inline-block;
-    margin: 20px 24px 28px;
+    margin: 10%;
 }
 #game-overlay {
     position: absolute;
